--- a/.gitignore
+++ b/.gitignore
@@ -1,79 +1,1 @@
-!_TAG_FILE_FORMAT	2	/extended format; --format=1 will not append ;" to lines/
-!_TAG_FILE_SORTED	1	/0=unsorted, 1=sorted, 2=foldcase/
-!_TAG_OUTPUT_MODE	u-ctags	/u-ctags or e-ctags/
-!_TAG_PROGRAM_AUTHOR	Universal Ctags Team	//
-!_TAG_PROGRAM_NAME	Universal Ctags	/Derived from Exuberant Ctags/
-!_TAG_PROGRAM_URL	https://ctags.io/	/official site/
-!_TAG_PROGRAM_VERSION	0.0.0	/45968eff/
-Base.show	src/binary.jl	/^function Base.show( io :: IO$/;"	f
-Base.show	src/eclipse.jl	/^Base.show(io :: IO, x :: EclipseType) = begin$/;"	f
-Base.show	src/orbit.jl	/^function Base.show( io :: IO$/;"	f
-Base.show	src/roche.jl	/^function Base.show( io :: IO$/;"	f
-Base.show	src/star.jl	/^function Base.show( io :: IO$/;"	f
-Binary	src/binary.jl	/^struct Binary$/;"	f
-EclipseType	src/eclipse.jl	/^EclipseType(x :: Int64) = reinterpret(EclipseType, convert(Int8, x))$/;"	f
-EclipseType	src/eclipse.jl	/^EclipseType(x :: Int8) = reinterpret(EclipseType, x)$/;"	f
-EclipseType	src/eclipse.jl	/^primitive type EclipseType <: Integer 8 end$/;"	f
-EclipsingBinaryStars	src/EclipsingBinaryStars.jl	/^module EclipsingBinaryStars$/;"	f
-EclipsingBinaryStars.jl	README.md	/^# EclipsingBinaryStars.jl$/;"	c
-Int8	src/eclipse.jl	/^Int8(x :: EclipseType) = reinterpret(Int8, x)$/;"	f
-Orbit	src/orbit.jl	/^struct Orbit$/;"	f
-Roche	src/roche.jl	/^struct Roche$/;"	f
-Star	src/star.jl	/^struct Star$/;"	f
-alpha	src/limb_darkening.jl	/^function alpha(mu)$/;"	f
-area_of_overlap	src/eclipse.jl	/^function area_of_overlap( ρ  :: Unitful.Length$/;"	f
-detached_check	src/detached.jl	/^function detached_check( s :: Binary ) :: Tuple{Bool,Int}$/;"	f
-eclipse_morph_at_ν	src/eclipse.jl	/^function eclipse_morph_at_ν( s :: Binary$/;"	f
-eclipse_morphs	src/eclipse.jl	/^function eclipse_morphs( s :: Binary$/;"	f
-f	src/eclipse.jl	/^    f(E) = abs(E - o.ε*sin(E) - M)$/;"	f
-f	src/eclipse.jl	/^    f(ν) = abs(get_ρ(orb, ν*rad) - (ρ_c)).val$/;"	f
-f	src/eclipse.jl	/^    f(ν) = abs(get_ρ(orb, ν*rad) - ρ_c).val$/;"	f
-fillout_factor	src/roche/roche.jl	/^function fillout_factor( ϱpole :: Float64$/;"	f
-frac_visible_area	src/eclipse.jl	/^function frac_visible_area( s :: Binary$/;"	f
-getBinary	src/binary.jl	/^function getBinary( pri :: Star$/;"	f
-get_E_from_M	src/eclipse.jl	/^function get_E_from_M( o :: Orbit$/;"	f
-get_E_from_ν	src/eclipse.jl	/^function get_E_from_ν( o :: Orbit$/;"	f
-get_L1	src/roche/lagrangian_points.jl	/^function get_L1( m1  :: Float64$/;"	f
-get_M_from_E	src/eclipse.jl	/^function get_M_from_E( o :: Orbit$/;"	f
-get_M_from_ν	src/eclipse.jl	/^function get_M_from_ν( o :: Orbit$/;"	f
-get_critical_bounds	src/eclipse.jl	/^function get_critical_bounds$/;"	f
-get_critical_bounds	src/eclipse.jl	/^function get_critical_bounds( ω   :: Angle$/;"	f
-get_critical_ν	src/eclipse.jl	/^function get_critical_ν( orb :: Orbit$/;"	f
-get_critical_νs	src/eclipse.jl	/^function get_critical_νs$/;"	f
-get_critical_νs	src/eclipse.jl	/^function get_critical_νs( orb :: Orbit$/;"	f
-get_inner_critical_νs	src/eclipse.jl	/^function get_inner_critical_νs$/;"	f
-get_inner_critical_νs	src/eclipse.jl	/^function get_inner_critical_νs( b   :: Binary$/;"	f
-get_lagrangian_pnt	src/roche/lagrangian_points.jl	/^function get_lagrangian_pnt( pnt :: Int$/;"	f
-get_outer_critical_νs	src/eclipse.jl	/^function get_outer_critical_νs$/;"	f
-get_outer_critical_νs	src/eclipse.jl	/^function get_outer_critical_νs( b   :: Binary$/;"	f
-get_roche	src/roche.jl	/^function get_roche( pri :: Star$/;"	f
-get_sky_pos	src/eclipse.jl	/^function get_sky_pos( o :: Orbit$/;"	f
-get_syncpar	src/roche/roche.jl	/^function get_syncpar( ε :: Float64 ) :: Float64$/;"	f
-get_time_btw_νs	src/eclipse.jl	/^function get_time_btw_νs$/;"	f
-get_time_btw_νs	src/eclipse.jl	/^function get_time_btw_νs( b  :: Binary$/;"	f
-get_transit_duration_partial	src/eclipse.jl	/^function get_transit_duration_partial$/;"	f
-get_transit_duration_partial	src/eclipse.jl	/^function get_transit_duration_partial( s   :: Binary$/;"	f
-get_transit_duration_totann	src/eclipse.jl	/^function get_transit_duration_totann$/;"	f
-get_transit_duration_totann	src/eclipse.jl	/^function get_transit_duration_totann( s   :: Binary$/;"	f
-get_Ω	src/roche/roche.jl	/^function get_Ω(ϱ, q, δ, λ, ν, F)$/;"	f
-get_Ω_Lpnt	src/roche/roche.jl	/^function get_Ω_Lpnt( pnt :: Int$/;"	f
-get_Ωpnt	src/roche/roche.jl	/^function get_Ωpnt( r :: Float64$/;"	f
-get_Ωpole	src/roche/roche.jl	/^function get_Ωpole( r :: Float64$/;"	f
-get_ν_from_E	src/eclipse.jl	/^function get_ν_from_E( o :: Orbit$/;"	f
-get_ν_from_M	src/eclipse.jl	/^function get_ν_from_M( o :: Orbit$/;"	f
-get_ρ	src/eclipse.jl	/^function get_ρ( o :: Orbit$/;"	f
-kep3rd_get_period	src/orbit.jl	/^function kep3rd_get_period( pri       :: Star$/;"	f
-kep3rd_get_semimajor	src/orbit.jl	/^function kep3rd_get_semimajor( pri    :: Star$/;"	f
-plot_binary_ν	plotting/keplerian_eclipsing_model_plotting.jl	/^function plot_binary_ν( s :: Binary$/;"	f
-plot_lightcurve	plotting/keplerian_eclipsing_model_plotting.jl	/^function plot_lightcurve( s :: Binary$/;"	f
-roche_eff_radius	src/roche/roche.jl	/^function roche_eff_radius(δ,q)$/;"	f
-roche_radius	src/roche.jl	/^function roche_radius( q :: Real )$/;"	f
-roche_radius	src/roche.jl	/^roche_radius(M₁, M₂) = roche_radius(M₁\/M₂)$/;"	f
-rλμν_to_xyz	src/roche/roche.jl	/^function rλμν_to_xyz( r :: Float64$/;"	f
-rλμν_to_xyz	src/roche/roche.jl	/^function rλμν_to_xyz( rs :: Array{Float64,1}$/;"	f
-test_binary	plotting/keplerian_eclipsing_model_plotting.jl	/^function test_binary()$/;"	f
-test_lightcurve	plotting/keplerian_eclipsing_model_plotting.jl	/^function test_lightcurve()$/;"	f
-test_plot_binary	plotting/keplerian_eclipsing_model_plotting.jl	/^function test_plot_binary()$/;"	f
-test_plot_binary_crit_νs	plotting/keplerian_eclipsing_model_plotting.jl	/^function test_plot_binary_crit_νs()$/;"	f
-totflux	src/limb_darkening.jl	/^function totflux( s :: Binary$/;"	f
-xyz_to_λμν	src/roche/roche.jl	/^function xyz_to_λμν(x,y,z)$/;"	f
+tags
