--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 name = "EclipsingBinaryStars"
 uuid = "298f00ba-5fcf-566c-9100-f8b551e1d946"
+authors = ["m-wells"]
+version = "0.1.0"
 
 [deps]
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
