--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "EclipsingBinaryStars"
 uuid = "298f00ba-5fcf-566c-9100-f8b551e1d946"
+version = "0.1.1"
 authors = ["m-wells"]
-version = "0.1.0"
 
 [deps]
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
@@ -10,3 +10,6 @@ UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
