--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "EclipsingBinaryStars"
 uuid = "298f00ba-5fcf-566c-9100-f8b551e1d946"
 authors = ["m-wells"]
-version = "0.2.2"
+version = "0.3.0"
 
 [deps]
+DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
