--- a/Project.toml
+++ b/Project.toml
@@ -1,27 +1,25 @@
 name = "EclipsingBinaryStars"
 uuid = "298f00ba-5fcf-566c-9100-f8b551e1d946"
 authors = ["m-wells"]
-version = "0.4.4"
+version = "0.5.0"
 
 [deps]
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
+PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
-DoubleFloats = "1.0"
-ForwardDiff = "0.10"
-LaTeXStrings = "1.0"
-PyPlot = "2.9"
-Optim = "1.2"
-PyCall = "1.92"
-Unitful = "1.0"
-UnitfulAstro = "1.0"
+DoubleFloats = "^1.0"
+ForwardDiff = "^0.10"
+LaTeXStrings = "^1.0"
+Optim = "^1.2"
+Unitful = "^1.0"
+UnitfulAstro = "^1.0"
 julia = "1"
 
 [extras]
