--- a/Project.toml
+++ b/Project.toml
@@ -14,12 +14,12 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
-DoubleFloats = "^1.0"
-ForwardDiff = "^0.10"
-LaTeXStrings = "^1.0"
-Optim = "^1.2"
-Unitful = "^1.0"
-UnitfulAstro = "^1.0"
+DoubleFloats = "1.0"
+ForwardDiff = "0.10"
+LaTeXStrings = "1.0"
+Optim = "1.2"
+Unitful = "1.0"
+UnitfulAstro = "1.0"
 julia = "1"
 
 [extras]
